--- a/grossenrollmentrate.html
+++ b/grossenrollmentrate.html
@@ -799,6 +799,7 @@ obj.push(arr);
 }
  console.log(ar);
     options = {
+      title:{text:'Gross Enrollment Rate of Tertiary Education'},
       legend: {
         data:keys
     },
